# psa-update

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  rust.yml
src/: disk.rs  download.rs  interact.rs  main.rs  psa.rs
