[package]
name = "psa-update"
version = "0.0.4"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "gzip"] }
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "3.0", features = ["cargo"] }

log = "0.4"
env_logger = "0.9"

anyhow = "1.0"

console = "0.15"
dialoguer = "0.10"
indicatif = "0.17.0-rc.11"

regex = "1"

tar = "0.4.20"

sysinfo = "0.24"
