[package]
name = "psa-update"
version = "1.0.9"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.5", features = ["cargo"] }

log = "0.4"
env_logger = "0.11"

anyhow = "1.0"

console = "0.16"
dialoguer = "0.11"
indicatif = "0.18"

regex = "1"

tar = "0.4"

sysinfo = "0.37"
