[package]
name = "psa-update"
version = "1.0.11"
edition = "2024"

[dependencies]
# Forcing native-tls to be more lenient with servers that don't properly close connections
# With psa server, facing error with rustls: peer closed connection without sending TLS close_notify: https://docs.rs/rustls/latest/rustls/manual/_03_howto/index.html#unexpected-eof
reqwest = { version = "0.13", features = [ "stream", "native-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.5", features = ["cargo"] }

log = "0.4"
env_logger = "0.11"

anyhow = "1.0"

console = "0.16"
dialoguer = "0.12"
indicatif = "0.18"

tar = "0.4"

sysinfo = "0.38"
